--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,4 @@ xcodeproj=./iosApp
 android.useAndroidX=true
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
+systemProp.kotlinVersion="1.4.30"
