--- a/local.properties
+++ b/local.properties
@@ -1,1 +1,8 @@
-sdk.dir=C:\\Development\\Android\\sdk
+## This file must *NOT* be checked into Version Control Systems,
+# as it contains information specific to your local configuration.
+#
+# Location of the SDK. This is only used by Gradle.
+# For customization when using a Version Control System, please read the
+# header note.
+#Mon Apr 26 21:26:46 EDT 2021
+sdk.dir=/Users/billh/Library/Android/sdk
